# flexible-yolov5

./: .gitignore  Dockerfile  README.md  detector.py  eval.py  requirements.txt  test.py  train.py  train_demo.ipynb
configs/: data.yaml  hyp.scratch-med.yaml  model.yaml  model_efficientnet.yaml  model_gnn.yaml  model_hrnet.yaml  model_mobilenet.yaml  model_repvgg.yaml  model_resnet.yaml  model_shufflenet.yaml  model_swin.yaml  model_vgg.yaml  model_yolo.yaml
models/: model.py
models/backbone/: MobilenetV3.py  __init__.py  csp_yolo.py  resnet.py  shufflenetv2.py
models/head/: __init__.py  detection.py
models/hub/: yolov5-p2.yaml  yolov5l.yaml
models/loss/: __init__.py  loss.py
models/modules/: __init__.py  common.py  experimental.py
models/neck/: FPN.py  PAN.py
od/: __init__.py
od/data/: __init__.py  datasets.py  transform_voc.py
od/models/: __init__.py  model.py
projects/: test_client.py  tf_serving_client.py  triton_serving_client.py  utils.py  yolov5_client.py
projects/tf_serving_deploy/: Dockerfile  tf_serving.config
projects/triton_server_deploy/: Dockerfile
scripts/: detector.py  eval.py  export.py  export_onnx_qat.py  train.py
scripts/deploy/: export.py
scripts/trt_infer/cpp/: CMakeLists.txt  README.md
scripts/trt_infer/cpp/src/: image_inference.cpp
scripts/trt_quant/: README  calibrator.py  data.py  (+4 more)
utils/: augmentations.py  autoanchor.py  autobatch.py  callbacks.py  datasets.py  downloads.py  export.py  general.py  google_utils.py  make_yolov5_data.py  metrics.py  plots.py  qat_util.py  split_detector.py  torch_utils.py
(+47 files in other folders)
